--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ python-multipart>=0.0.6
 httpx>=0.25.0
 python-dotenv>=1.0.0
 
+# Database
+sqlalchemy>=2.0.0
+alembic>=1.13.0
+
 # LLM Providers
 openai>=1.3.0
 anthropic>=0.7.0
